--- a/game/index.html
+++ b/game/index.html
@@ -12,17 +12,17 @@
         <h1 id="mainHeading">TIC TAC TOE</h1> 
     <br> <br>
     <div class="firstDiv">
-        <input type="text" name="" onclick="inputTurnB1(); myFunc()" id="b1" readonly>
-        <input type="text" name="" onclick="inputTurnB2(); myFunc()" id="b2" readonly>
-        <input type="text" name="" onclick="inputTurnB3(); myFunc()" id="b3" readonly> 
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b1" readonly>
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b2" readonly>
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b3" readonly> 
         <br>
-        <input type="text" name="" onclick="inputTurnB4(); myFunc()" id="b4" readonly>
-        <input type="text" name="" onclick="inputTurnB5(); myFunc()" id="b5" readonly>
-        <input type="text" name="" onclick="inputTurnB6()" id="b6" readonly> 
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b4" readonly>
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b5" readonly>
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b6" readonly> 
         <br>
-        <input type="text" name="" onclick="inputTurnB7(); myFunc()" id="b7" readonly>
-        <input type="text" name="" onclick="inputTurnB8(); myFunc()" id="b8" readonly>
-        <input type="text" name="" onclick="inputTurnB9(); myFunc()" id="b9" readonly> 
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b7" readonly>
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b8" readonly>
+        <input type="text" onclick="inputTurn(this); myFunc()" id="b9" readonly> 
         <br>
 
     </div>
@@ -43,4 +43,3 @@
     <script src="./game.js"></script>
 </body>
 </html>
-
