--- a/Do/index.html
+++ b/Do/index.html
@@ -87,9 +87,9 @@
     <!-- Image Header -->
     <div class="w3-display-container w3-animate-opacity">
       <img
-        src="./images/big.jpeg"
+        src="./images/loreal1 (2).jpeg"
         alt="lcd"
-        style="width: 100%; height: 100%;"
+        style="width: 100%; height: 100%; padding: 100px 30px 0;"
       />
       <div class="w3-container w3-display-bottomleft w3-margin-bottom"></div>
     </div>
