--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -34,7 +34,7 @@
         <p>Effective Date: 7/31/2024</p>
 
         <h2>Introduction</h2>
-        <p>Welcome to Google Drive Analyst. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information.</p>
+        <p>Welcome to Drive Data Analyst. We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information.</p>
 
         <h2>Information We Collect</h2>
         <p>We collect personal information that you voluntarily provide to us when registering, expressing an interest in obtaining information about us or our products and services, when participating in activities on the platform or otherwise contacting us.</p>
@@ -46,7 +46,7 @@
         <p>We only share and disclose your information in the following situations: Compliance with Laws, Vital Interests and Legal Rights, Vendors, Consultants, and Other Third-Party Service Providers, Business Transfers, Affiliates, Business Partners, and with your Consent.</p>
 
         <h2>Your Privacy Rights</h2>
-        <p>You have certain rights under applicable data protection laws. These may include the right to access, correct, and delete the personal information we hold about you, among others. To exercise these rights, please contact us at [Contact Information].</p>
+        <p>You have certain rights under applicable data protection laws. These may include the right to access, correct, and delete the personal information we hold about you, among others. To exercise these rights, please contact us at sb03750@gmail.com.</p>
 
         <h2>Changes to This Privacy Policy</h2>
         <p>We may update this privacy policy from time to time in order to reflect, for example, changes to our practices or for other operational, legal, or regulatory reasons. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
